# LOOM

./: .gitattributes  .gitignore  .gitmodules  ADD_GITHUB_REMOTE.md  BUILD_AND_RUN.md  CMakeLists.txt  CONTRIBUTING.md  HONEST_STATUS.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SETUP_WIKI.md  build-and-run.ps1  cleanup_docs.bat  cleanup_redundant_docs.sh  esp32_com5_test.ps1  esp32_loom_full.md  esp32_serial_test.py  loom_complete_documentation.tex  test_working_parser.md
.deprecated_docs/: FULL_PROJECT_PLAN.md  Kernelidea.md  README_NEW.md  loom-master-spec.md  loom_complete_framework.md  loom_mathematics.md  loom_register_architecture.md
.github/: PULL_REQUEST_TEMPLATE.md
_wiki_seed_tmp/: Home.md  README.md  getting-started.md  implementation-status.md  priority-tasks.md
docs/: architecture.html  index.html  index.md  operators.html  tensor_backends.md  theory.html  viz.html
esp32/: KERNEL_IMPLEMENTATION_PLAN.md  README.md  (+14 more)
kernel/: CMakeLists.txt  README.md  build_test_harness.ps1
kernel/esp32/: CMakeLists_ESP32.txt  README_ESP32.md  esp32_loom_arduino.cpp  loom_esp32_kernel.c  loom_to_kernel.h
kernel/esp32/ESP32_LOOM_Kernel/: ESP32_LOOM_Kernel.ino
kernel/esp32/arduino_project/: esp32_loom_demo.ino
kernel/esp32/idf_project/: CMakeLists.txt
kernel/esp32/idf_project/main/: CMakeLists.txt
kernel/metal/: loom_tensor_metal.mm
kernel/src/: loom_kernel.c  loom_kernel.h  loom_tensor.c  loom_tensor.h  loom_tensor_cuda.c  loom_tensor_metal.c  test_harness.c
src/lang/: Cargo.toml
src/lang/src/: actual_implementation.rs  ast.rs  cifar_learning.rs  codegen_c.rs  concept_demo.rs  dynamic_sensory_engine.rs  interpreter.rs  io_interface.rs  learning.rs  levi_computational_engine.rs  lexer.rs  lib.rs  main.rs  mathematically_correct_engine.rs  parser.rs  parser_simple.rs  repl.rs  runtime.rs  semantic_encoding.rs  simple_repl.rs  simple_runtime.rs  unified_demo.rs  unified_topology.rs  vector_parser.rs  vector_repl.rs  vector_topology.rs
(+75 files in other folders)
