[package]
name = "loom-lang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loom_real"
path = "src/bin/loom_real.rs"

[[bin]]
name = "loom_cifar"
path = "src/bin/loom_cifar.rs"

[dependencies]
# Parser and lexer
nom = "7.1"
logos = "0.13"

# Memory and topology
memmap2 = "0.9"
rayon = "1.7"
dashmap = "5.5"
parking_lot = "0.12"

# Math and vectors
nalgebra = "0.32"
ndarray = "0.15"

# Runtime
tokio = { version = "1.35", features = ["full"] }
crossbeam = "0.8"

# Randomness
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Development
anyhow = "1.0"
tracing = "0.1"
clap = { version = "4.4", features = ["derive"] }

# Testing
tempfile = "3.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[profile.topology]
inherits = "release"
overflow-checks = false
debug-assertions = false